feat(quest): create quest api handler
